--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,25 @@
-:root {
-    --primary-text-color: #757575;
-    --title-text-color: #212121;
-    --logo-color: #000000;
-    --accent-color: #2196F3;
-    --secondary-accent-color: #ffffff;
-    --hover-button-color: #188CE8;
-    --primary-background-color: #E5E5E5;
-    --accent-background-color: #C4C4C4;
-    --footer-background-color: #2F303A;
-    --accent-section-color: #F5F4FA;
-    --text-footer-color: rgba(255, 255, 255, 0.6);
-    --border-bottom-color: #ECECEC;
-    --border-div-color: #EEEEEE;
-    --icon-color: #AFB1B8;
-    --primary-text-family: Roboto, sans-serif;
-    --accent-text-family: Raleway, sans-serif;
-    --primary-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+@import './utils/variables';
+@import './utils/visually-hidden';
 
-}
+
+@import './base/common';
+@import './base/container';
+@import './base/titles';
+
+@import './components/button';
+@import './components/social-networks';
+@import './components/logo';
+@import './components/backdrop';
+@import './components/modal';
+@import './components/modal-form';
+
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/characteristic';
+@import './layouts/activities';
+@import './layouts/team';
+@import './layouts/clients';
+@import './layouts/footer';
+
+@import './layouts/buttons-list';
+@import './layouts/example-list';
