--- a/css/main.css
+++ b/css/main.css
@@ -126,9 +126,7 @@ img {
   transition: background-color 250ms var(--primary-timing-function), box-shadow 250ms var(--primary-timing-function);
   transition: background-color 250ms var(--primary-timing-function), box-shadow 250ms var(--primary-timing-function), -webkit-box-shadow 250ms var(--primary-timing-function);
 }
-
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background-color: var(--hover-button-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -159,6 +157,9 @@ img {
   -webkit-transition: background-color 250ms var(--primary-timing-function);
   transition: background-color 250ms var(--primary-timing-function);
 }
+.social-network__link:hover, .social-network__link:focus {
+  background-color: var(--accent-color);
+}
 
 .social-network__link--accent {
   background-color: rgba(255, 255, 255, 0.1);
@@ -167,14 +168,7 @@ img {
 .social-network__icon {
   fill: var(--secondary-accent-color);
 }
-
-.social-network__link:hover,
-.social-network__link:focus {
-  background-color: var(--accent-color);
-}
-
-.social-network__link:hover .social-network__icon,
-.social-network__link:focus .social-network__icon {
+.social-network__link:hover .social-network__icon, .social-network__link:focus .social-network__icon {
   fill: var(--secondary-accent-color);
 }
 
@@ -208,7 +202,6 @@ img {
   -webkit-transition: opacity 500ms var(--primary-timing-function), visibility 500ms var(--primary-timing-function);
   transition: opacity 500ms var(--primary-timing-function), visibility 500ms var(--primary-timing-function);
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -253,9 +246,7 @@ img {
   -webkit-transition: fill 250ms var(--primary-timing-function);
   transition: fill 250ms var(--primary-timing-function);
 }
-
-.modal__button:hover,
-.modal__button:focus {
+.modal__button:hover, .modal__button:focus {
   fill: var(--accent-color);
 }
 
@@ -283,38 +274,6 @@ img {
 .modal-form__name {
   display: inline-block;
   margin-bottom: 4px;
-}
-
-.modal-form__feedback-input::-webkit-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-color);
-}
-
-.modal-form__feedback-input::-moz-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-color);
-}
-
-.modal-form__feedback-input:-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-color);
-}
-
-.modal-form__feedback-input::-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-color);
-}
-
-.modal-form__name,
-.modal-form__feedback-input::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -329,15 +288,9 @@ img {
   border-radius: 4px;
   font: inherit;
 }
-
-.modal-form__icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: fill 250ms var(--primary-timing-function);
-  transition: fill 250ms var(--primary-timing-function);
+.modal-form__input:focus-within {
+  border-color: var(--accent-color);
+  outline: none;
 }
 
 .modal-form__feedback-label {
@@ -354,33 +307,50 @@ img {
   border-radius: 4px;
   font: inherit;
 }
-
 .modal-form__feedback-input::-webkit-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-form__feedback-input::-moz-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-form__feedback-input:-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-form__feedback-input::-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-form__feedback-input::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-form__input:focus-within,
 .modal-form__feedback-input:focus-within {
   border-color: var(--accent-color);
   outline: none;
 }
 
+.modal-form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: fill 250ms var(--primary-timing-function);
+  transition: fill 250ms var(--primary-timing-function);
+}
 .modal-form__input:focus ~ .modal-form__icon {
   fill: var(--accent-color);
 }
@@ -404,7 +374,6 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
-
 .modal-form__checkbox-label:before {
   display: inline-block;
   width: 16px;
@@ -417,11 +386,9 @@ img {
   -webkit-transition: outline 250ms var(--primary-timing-function);
   transition: outline 250ms var(--primary-timing-function);
 }
-
 .modal-form__checkbox-input:focus-within + .modal-form__checkbox-label:before {
   outline: 1px solid var(--accent-color);
 }
-
 .modal-form__checkbox-input:checked + .modal-form__checkbox-label:before {
   outline: 1px solid var(--accent-color);
   border: none;
@@ -435,7 +402,6 @@ img {
   -webkit-transition: opacity 250ms var(--primary-timing-function), visibility 250ms var(--primary-timing-function);
   transition: opacity 250ms var(--primary-timing-function), visibility 250ms var(--primary-timing-function);
 }
-
 .modal-form__checkbox-input:checked ~ .modal-form__checkbox-icon {
   opacity: 1;
   outline: 1px solid var(--accent-color);
@@ -501,10 +467,12 @@ img {
   padding-top: 7px;
   padding-bottom: 7px;
   color: var(--title-text-color);
-  -webkit-transition: color 250ms c;
-  transition: color 250ms c;
+  -webkit-transition: color 250ms var(--primary-timing-function);
+  transition: color 250ms var(--primary-timing-function);
 }
-
+.site-nav__link.current, .site-nav__link:hover, .site-nav__link:focus {
+  color: var(--accent-color);
+}
 .site-nav__link.current::after {
   position: absolute;
   top: 52px;
@@ -540,6 +508,9 @@ img {
   -webkit-transition: color 250ms var(--primary-timing-function);
   transition: color 250ms var(--primary-timing-function);
 }
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent-color);
+}
 
 .contacts__icon {
   fill: var(--primary-text-color);
@@ -547,15 +518,6 @@ img {
   -webkit-transition: fill 250ms var(--primary-timing-function);
   transition: fill 250ms var(--primary-timing-function);
 }
-
-.site-nav__link.current,
-.site-nav__link:hover,
-.site-nav__link:focus,
-.contacts__link:hover,
-.contacts__link:focus {
-  color: var(--accent-color);
-}
-
 .contacts__link:hover .contacts__icon {
   fill: var(--accent-color);
 }
@@ -744,20 +706,16 @@ img {
   -webkit-transition: border 250ms var(--primary-timing-function);
   transition: border 250ms var(--primary-timing-function);
 }
+.clients__link:hover, .clients__link:focus {
+  border: 1px solid var(--accent-color);
+}
 
 .clients__icon {
   fill: var(--icon-color);
   -webkit-transition: fill 250ms var(--primary-timing-function);
   transition: fill 250ms var(--primary-timing-function);
 }
-
-.clients__link:hover,
-.clients__ink:focus {
-  border: 1px solid var(--accent-color);
-}
-
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
+.clients__link:hover .clients__icon, .clients__link:focus .clients__icon {
   fill: var(--accent-color);
 }
 
@@ -800,7 +758,17 @@ img {
   font-style: normal;
 }
 
-.address-list__link-mail,
+.address-list__link-mail {
+  color: var(--text-footer-color);
+  text-decoration: none;
+  font-style: normal;
+  -webkit-transition: color 250ms var(--primary-timing-function);
+  transition: color 250ms var(--primary-timing-function);
+}
+.address-list__link-mail:hover, .address-list__link-mail:focus {
+  color: var(--accent-color);
+}
+
 .address-list__link-tel {
   color: var(--text-footer-color);
   text-decoration: none;
@@ -808,11 +776,7 @@ img {
   -webkit-transition: color 250ms var(--primary-timing-function);
   transition: color 250ms var(--primary-timing-function);
 }
-
-.address-list__link-mail:hover,
-.address-list__link-mail:focus,
-.address-list__link-tel:hover,
-.address-list__link-tel:focus {
+.address-list__link-tel:hover, .address-list__link-tel:focus {
   color: var(--accent-color);
 }
 
@@ -848,7 +812,6 @@ img {
   border-radius: 4px;
   background-color: transparent;
 }
-
 .submit-form__input::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -856,7 +819,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .submit-form__input::-moz-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -864,7 +826,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .submit-form__input:-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -872,7 +833,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .submit-form__input::-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -880,7 +840,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .submit-form__input::placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -888,7 +847,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .submit-form__input:focus-within {
   color: var(--secondary-accent-color);
 }
@@ -940,6 +898,12 @@ img {
   transition: background-color 250ms var(--primary-timing-function), color 250ms var(--primary-timing-function), box-shadow 250ms var(--primary-timing-function);
   transition: background-color 250ms var(--primary-timing-function), color 250ms var(--primary-timing-function), box-shadow 250ms var(--primary-timing-function), -webkit-box-shadow 250ms var(--primary-timing-function);
 }
+.buttons-list__button:hover, .buttons-list__button:focus {
+  background-color: var(--accent-color);
+  color: var(--secondary-accent-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 
 .buttons-list__button--btn-all {
   min-width: 74px;
@@ -959,14 +923,6 @@ img {
 
 .buttons-list__button--btn-mar {
   min-width: 130px;
-}
-
-.buttons-list__button:hover,
-.buttons-list__button:focus {
-  background-color: var(--accent-color);
-  color: var(--secondary-accent-color);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .example-list {
@@ -992,9 +948,7 @@ img {
   transition: box-shadow 250ms var(--primary-timing-function);
   transition: box-shadow 250ms var(--primary-timing-function), -webkit-box-shadow 250ms var(--primary-timing-function);
 }
-
-.product-card:hover,
-.product-card:focus {
+.product-card:hover, .product-card:focus {
   display: block;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1004,14 +958,7 @@ img {
   position: relative;
   overflow: hidden;
 }
-
 .product-card__wrapper::before {
-  content: "";
-  background: rgba(33, 150, 243, 0.9);
-}
-
-.product-card__wrapper::before,
-.product-card__text {
   position: absolute;
   top: 0;
   left: 0;
@@ -1024,17 +971,33 @@ img {
   transition: -webkit-transform 250ms var(--primary-timing-function);
   transition: transform 250ms var(--primary-timing-function);
   transition: transform 250ms var(--primary-timing-function), -webkit-transform 250ms var(--primary-timing-function);
+  content: "";
+  background: rgba(33, 150, 243, 0.9);
+}
+.product-card:hover .product-card__wrapper::before {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .product-card__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  display: block;
+  width: 100%;
+  height: 100%;
   padding: 63px 24px 63px 24px;
   margin: 0;
   color: var(--secondary-accent-color);
   font-size: 18px;
   line-height: 1.56;
+  -webkit-transition: -webkit-transform 250ms var(--primary-timing-function);
+  transition: -webkit-transform 250ms var(--primary-timing-function);
+  transition: transform 250ms var(--primary-timing-function);
+  transition: transform 250ms var(--primary-timing-function), -webkit-transform 250ms var(--primary-timing-function);
 }
-
-.product-card:hover .product-card__wrapper::before,
 .product-card:hover .product-card__text {
   -webkit-transform: translateY(0);
           transform: translateY(0);
