--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -7,11 +7,12 @@
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 500ms var(--primary-timing-function),
         visibility 500ms var(--primary-timing-function);
+    
+    &.is-hidden {
+            opacity: 0;
+            pointer-events: none;
+            visibility: 0;
+    
+        }
 }
 
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: 0;
-
-}
