--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -13,10 +13,11 @@
     cursor: pointer;
     transition: background-color 250ms var(--primary-timing-function),
         box-shadow 250ms var(--primary-timing-function);
-}
-
-.button:hover,
-.button:focus {
-    background-color: var(--hover-button-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    
+        
+    &:hover,
+    &:focus {
+            background-color: var(--hover-button-color);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        }
 }
