--- a/scss/components/_social-networks.scss
+++ b/scss/components/_social-networks.scss
@@ -13,6 +13,10 @@
     border-radius: 50%;
     transition: background-color 250ms var(--primary-timing-function);
 
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
 }
 
 .social-network__link--accent {
@@ -22,14 +26,10 @@
 
 .social-network__icon {
     fill: var(--secondary-accent-color);
+
+    .social-network__link:hover &,
+    .social-network__link:focus & {
+        fill: var(--secondary-accent-color);
+        }
 }
 
-.social-network__link:hover,
-.social-network__link:focus {
-    background-color: var(--accent-color);
-}
-
-.social-network__link:hover .social-network__icon,
-.social-network__link:focus .social-network__icon {
-    fill: var(--secondary-accent-color);
-}
