--- a/scss/layouts/_buttons-list.scss
+++ b/scss/layouts/_buttons-list.scss
@@ -20,6 +20,15 @@
     transition: background-color 250ms var(--primary-timing-function),
         color 250ms var(--primary-timing-function),
         box-shadow 250ms var(--primary-timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--secondary-accent-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+                    0px 1px 2px rgba(0, 0, 0, 0.08), 
+                    0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
 }
 
 .buttons-list__button--btn-all {
@@ -42,9 +51,3 @@
     min-width: 130px;
 }
 
-.buttons-list__button:hover,
-.buttons-list__button:focus {
-    background-color: var(--accent-color);
-    color: var(--secondary-accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
