--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -11,19 +11,22 @@
     border: 1px solid var(--icon-color);
     border-radius: 4px;
     transition: border 250ms var(--primary-timing-function);
+
+    &:hover,
+    &:focus {
+        border: 1px solid var(--accent-color);
+    }
 }
 
 .clients__icon {
     fill: var(--icon-color);
     transition: fill 250ms var(--primary-timing-function);
+
+    .clients__link:hover &,
+    .clients__link:focus & {
+        fill: var(--accent-color);
+        }
 }
 
-.clients__link:hover,
-.clients__ink:focus {
-    border: 1px solid var(--accent-color);
-}
 
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-    fill: var(--accent-color);
-}
+
