--- a/scss/layouts/_example-list.scss
+++ b/scss/layouts/_example-list.scss
@@ -14,51 +14,58 @@
 
 .product-card {
     transition: box-shadow 250ms var(--primary-timing-function);
-}
 
-.product-card:hover,
-.product-card:focus {
-    display: block;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus {
+        display: block;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+                    0px 4px 4px rgba(0, 0, 0, 0.06), 
+                    1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
 }
 
 .product-card__wrapper {
     position: relative;
     overflow: hidden;
+
+    &::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms var(--primary-timing-function);
+        content: "";
+        background: rgba(33, 150, 243, 0.9);
+
+
+        .product-card:hover & {
+                transform: translateY(0);
+            }
+    }
 }
 
-.product-card__wrapper::before {
-    content: "";
-    background: rgba(33, 150, 243, 0.9);
-}
-
-.product-card__wrapper::before,
 .product-card__text {
     position: absolute;
     top: 0;
     left: 0;
+    transform: translateY(100%);
     display: block;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms var(--primary-timing-function);
-
-}
-
-.product-card__text {
     padding: 63px 24px 63px 24px;
     margin: 0;
     color: var(--secondary-accent-color);
     font-size: 18px;
     line-height: 1.56;
+    transition: transform 250ms var(--primary-timing-function);
+
+    .product-card:hover & {
+            transform: translateY(0);
+    }
 }
-
-.product-card:hover .product-card__wrapper::before,
-.product-card:hover .product-card__text {
-    transform: translateY(0);
-}
-
-
 
 .product-card__container {
     border: 1px solid var(--border-div-color);
