--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -37,18 +37,24 @@
     padding-top: 7px;
     padding-bottom: 7px;
     color: var(--title-text-color);
-    transition: color 250ms c;
-}
+    transition: color 250ms var(--primary-timing-function);
 
-.site-nav__link.current::after {
-    position: absolute;
-    top: 52px;
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
+    &.current,
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+
+    &.current::after {
+        position: absolute;
+        top: 52px;
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+    }
 }
 
 .contacts {
@@ -68,22 +74,19 @@
     padding-top: 7px;
     padding-bottom: 7px;
     transition: color 250ms var(--primary-timing-function);
+    
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .contacts__icon {
     fill: var(--primary-text-color);
     margin-right: 10px;
     transition: fill 250ms var(--primary-timing-function);
-}
 
-.site-nav__link.current,
-.site-nav__link:hover,
-.site-nav__link:focus,
-.contacts__link:hover,
-.contacts__link:focus {
-    color: var(--accent-color);
-}
-
-.contacts__link:hover .contacts__icon {
-    fill: var(--accent-color);
+    .contacts__link:hover & {
+        fill: var(--accent-color);
+    }
 }
