--- a/scss/base/_titles.scss
+++ b/scss/base/_titles.scss
@@ -1,3 +1,4 @@
+
 .characteristic__title,
 .activities__title,
 .team__title,
@@ -5,19 +6,14 @@
 .clients__title,
 .footer__title,
 .product-card__title {
-    color: var(--title-text-color);
-    font-weight: 700;
-    margin-top: 0;
-    margin-bottom: 0;
+ @extend %title;
 }
 
 .activities__title,
 .team__title,
 .clients__title {
-    font-size: 36px;
-    line-height: 1.17;
+    @include font(36px, 1.17, 0.03em);
     text-align: center;
-    letter-spacing: 0.03em;
     margin-bottom: 50px;
 }
 
@@ -29,3 +25,5 @@
     text-transform: uppercase;
     margin-bottom: 10px;
 }
+
+
