--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -2,17 +2,15 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    @include format (100vw, 100vh);
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 500ms var(--primary-timing-function),
         visibility 500ms var(--primary-timing-function);
     
     &.is-hidden {
-            opacity: 0;
-            pointer-events: none;
-            visibility: 0;
-    
-        }
+        opacity: 0;
+        pointer-events: none;
+        visibility: 0;
+    }
 }
 
