--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,11 +1,10 @@
 .button {
+    
     color: var(--secondary-accent-color);
     font-family: var(--primary-text-family);
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+    @include font(16px, 1.88, 0.06em);
     background-color: var(--accent-color);
     border-radius: 4px;
     border: 0;
