--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -1,7 +1,6 @@
 .modal-form {
     display: block;
-    width: 100%;
-    height: auto;
+    @include format (100%, auto);  
 }
 
 .modal-form__title {
@@ -48,8 +47,7 @@
 }
 
 .modal-form__feedback-input {
-    width: 448px;
-    height: 120px;
+    @include format (448px, 120px);
     padding: 12px 16px;
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -87,17 +85,12 @@
 }
 
 .modal-form__checkbox-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-
+    @extend %flex;
+    @include font(14px, 1.71, 0.03em);
+ 
     &:before {
         display: inline-block;
-        width: 16px;
-        height: 16px;
+        @include format (16px, 16px);
         border: 2px solid var(--title-text-color);
         cursor: pointer;
         content: "";
