--- a/scss/layouts/_characteristic.scss
+++ b/scss/layouts/_characteristic.scss
@@ -17,11 +17,8 @@
 }
 
 .characteristic__icon-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
+    @extend %flex;
+    @include format (270px, 120px);
     background-color: var(--accent-section-color);
     margin-bottom: 30px;
 }
