--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -21,7 +21,6 @@
 .contacts {
     display: flex;
     align-items: center;
-
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -50,8 +49,7 @@
         top: 52px;
         content: "";
         display: block;
-        width: 100%;
-        height: 4px;
+        @include format (100%, 4px);
         border-radius: 2px;
         background-color: var(--accent-color);
     }
@@ -67,10 +65,8 @@
 
 
 .contacts__link {
+    @extend %flex;
     color: inherit;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding-top: 7px;
     padding-bottom: 7px;
     transition: color 250ms var(--primary-timing-function);
