--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './utils/placeholders';
+@import './utils/mixins';
 
 
 @import './base/common';
@@ -12,6 +14,7 @@
 @import './components/backdrop';
 @import './components/modal';
 @import './components/modal-form';
+@import './components/submit-form';
 
 @import './layouts/header';
 @import './layouts/hero';
